// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListHeader /> snapshot should match snapshot 1`] = `
<ListHeader>
  <div
    className="md-list-header-wrapper"
    data-bold={false}
    data-outline={false}
    data-outline-color="primary"
    data-outline-only={true}
    data-outline-position="bottom"
  >
    <ListItemBase
      className="md-list-header-list-item-base"
      interactive={false}
      isPadded={true}
      size={32}
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-header-list-item-base md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={false}
            data-padded={true}
            data-shape="rectangle"
            data-size={32}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          />
        </FocusRing>
      </FocusRing>
    </ListItemBase>
  </div>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with bold 1`] = `
<ListHeader
  bold={true}
  outline={true}
>
  <div
    className="md-list-header-wrapper"
    data-bold={true}
    data-outline={true}
    data-outline-color="primary"
    data-outline-only={true}
    data-outline-position="bottom"
  >
    <ListItemBase
      className="md-list-header-list-item-base"
      interactive={false}
      isPadded={true}
      size={32}
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-header-list-item-base md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={false}
            data-padded={true}
            data-shape="rectangle"
            data-size={32}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          />
        </FocusRing>
      </FocusRing>
    </ListItemBase>
    <div
      className="md-list-header-list-header-separator"
      role="separator"
    />
  </div>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with className 1`] = `
<ListHeader
  className="example-class"
>
  <div
    className="example-class md-list-header-wrapper"
    data-bold={false}
    data-outline={false}
    data-outline-color="primary"
    data-outline-only={true}
    data-outline-position="bottom"
  >
    <ListItemBase
      className="md-list-header-list-item-base"
      interactive={false}
      isPadded={true}
      size={32}
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-header-list-item-base md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={false}
            data-padded={true}
            data-shape="rectangle"
            data-size={32}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          />
        </FocusRing>
      </FocusRing>
    </ListItemBase>
  </div>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with id 1`] = `
<ListHeader
  id="example-id"
>
  <div
    className="md-list-header-wrapper"
    data-bold={false}
    data-outline={false}
    data-outline-color="primary"
    data-outline-only={true}
    data-outline-position="bottom"
    id="example-id"
  >
    <ListItemBase
      className="md-list-header-list-item-base"
      interactive={false}
      isPadded={true}
      size={32}
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-header-list-item-base md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={false}
            data-padded={true}
            data-shape="rectangle"
            data-size={32}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          />
        </FocusRing>
      </FocusRing>
    </ListItemBase>
  </div>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with outline 1`] = `
<ListHeader
  outline={true}
>
  <div
    className="md-list-header-wrapper"
    data-bold={false}
    data-outline={true}
    data-outline-color="primary"
    data-outline-only={true}
    data-outline-position="bottom"
  >
    <ListItemBase
      className="md-list-header-list-item-base"
      interactive={false}
      isPadded={true}
      size={32}
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-header-list-item-base md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={false}
            data-padded={true}
            data-shape="rectangle"
            data-size={32}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          />
        </FocusRing>
      </FocusRing>
    </ListItemBase>
    <div
      className="md-list-header-list-header-separator"
      role="separator"
    />
  </div>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with outlineColor 1`] = `
<ListHeader
  outline={true}
  outlineColor="secondary"
>
  <div
    className="md-list-header-wrapper"
    data-bold={false}
    data-outline={true}
    data-outline-color="secondary"
    data-outline-only={true}
    data-outline-position="bottom"
  >
    <ListItemBase
      className="md-list-header-list-item-base"
      interactive={false}
      isPadded={true}
      size={32}
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-header-list-item-base md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={false}
            data-padded={true}
            data-shape="rectangle"
            data-size={32}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          />
        </FocusRing>
      </FocusRing>
    </ListItemBase>
    <div
      className="md-list-header-list-header-separator"
      role="separator"
    />
  </div>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with outlinePosition 1`] = `
<ListHeader
  outline={true}
  outlinePosition="bottom"
>
  <div
    className="md-list-header-wrapper"
    data-bold={false}
    data-outline={true}
    data-outline-color="primary"
    data-outline-only={true}
    data-outline-position="bottom"
  >
    <ListItemBase
      className="md-list-header-list-item-base"
      interactive={false}
      isPadded={true}
      size={32}
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-header-list-item-base md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={false}
            data-padded={true}
            data-shape="rectangle"
            data-size={32}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          />
        </FocusRing>
      </FocusRing>
    </ListItemBase>
    <div
      className="md-list-header-list-header-separator"
      role="separator"
    />
  </div>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with outlinePosition 2`] = `
<ListHeader
  outline={true}
  outlinePosition="bottom"
>
  <div
    className="md-list-header-wrapper"
    data-bold={false}
    data-outline={true}
    data-outline-color="primary"
    data-outline-only={true}
    data-outline-position="bottom"
  >
    <ListItemBase
      className="md-list-header-list-item-base"
      interactive={false}
      isPadded={true}
      size={32}
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-header-list-item-base md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={false}
            data-padded={true}
            data-shape="rectangle"
            data-size={32}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          />
        </FocusRing>
      </FocusRing>
    </ListItemBase>
    <div
      className="md-list-header-list-header-separator"
      role="separator"
    />
  </div>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with style 1`] = `
<ListHeader
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-list-header-wrapper"
    data-bold={false}
    data-outline={false}
    data-outline-color="primary"
    data-outline-only={true}
    data-outline-position="bottom"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <ListItemBase
      className="md-list-header-list-item-base"
      interactive={false}
      isPadded={true}
      size={32}
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-header-list-item-base md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={false}
            data-padded={true}
            data-shape="rectangle"
            data-size={32}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          />
        </FocusRing>
      </FocusRing>
    </ListItemBase>
  </div>
</ListHeader>
`;
